--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
+web:
+    image: nginx:stable
+    volumes:
+        - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
+        - ./web:/var/www/public:ro
+    links:
+        - node
+    ports:
+        - "80:80"
+
 node:
     image: node:7
     command: node /usr/src/app/app.js
     volumes:
-        - .:/usr/src/app
+        - ./node:/usr/src/app
     links:
         - mongo
     ports:
-        - "80:3000"
+        - "3000:3000"
 
 mongo:
     image: mongo:3
     volumes:
-        - db:/data/db
+        - ./db:/data/db
