--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -15,7 +15,7 @@ http {
         access_log /var/log/nginx/access.log;
         root /var/www/public;
 
-        location ~* /api {
+        location ~* (/api/*|/login) {
             proxy_pass http://node:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
