--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -22,6 +22,7 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+	    include /etc/nginx/mime.types;
         }
     }
 }
